--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForPrivilegedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForPrivilegedUser_ReturnsCorrectPage.html
@@ -57,15 +57,16 @@
 
 
     <form method="post" action="/MoviesToSee/ConfirmMovieAdding">
-        <div class="validation-summary-valid" data-valmsg-summary="true"><ul><li style="display:none"></li>
-</ul></div>
-        <div class="input-group">
-            <div class="input-group-append">
-                <input type="hidden" data-val="true" data-val-required="The CurrentPageNumber field is required." id="Paging_CurrentPageNumber" name="Paging.CurrentPageNumber" value="1" />
-                <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="The MovieUri field is required." id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
-                <button class="btn btn-primary" type="submit">Add</button>
+        <div class="form-group">
+            <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true"></span></div>
+            <div class="input-group">
+                <div class="input-group-append">
+                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="The MovieUri field is required." id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
+                    <button class="btn btn-primary" type="submit">Add</button>
+                </div>
             </div>
         </div>
+        <input type="hidden" data-val="true" data-val-required="The CurrentPageNumber field is required." id="Paging_CurrentPageNumber" name="Paging.CurrentPageNumber" value="1" />
     <input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /></form>
 
     <ul class="movies-list">
